# peters-photo-manager

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  audit.md  prompts.md  software-specification.md  tasks.md
apps/desktop/: README.md  index.html  package-lock.json  package.json
apps/desktop/src/: main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_back.jpg_original
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/native/: dng_writer.cpp
apps/desktop/src-tauri/src/: db.rs  dng_writer.rs  editor_save.rs  lib.rs  main.rs  scanner.rs  settings.rs  thumbnails.rs
docs/: README.md  user-manual.md
docs/decisions/: README.md
docs/development/: backlog.md  current-phase.md
exports/: Peter’s Photo Manager_0.3.0-alpha.2_aarch64.dmg
project-docs/: README.md  user-manual.md
project-docs/decisions/: 2026-07-16-phase-1-folder-scanning.md  2026-07-16-responsive-catalogue-browsing.md  2026-07-19-rendered-dng-raw-save-workflow.md  README.md
project-docs/development/: adobe-dng-sdk-setup.md  backlog.md  current-phase.md  edit-module-plan.md
scripts/: export-dmg.js
tests/fixtures/: README.md
