[package]
name = "peters-photo-manager"
version = "0.4.0-alpha.1"
description = "A local-first desktop photo manager."
authors = ["Peter Beens"]
edition = "2021"
default-run = "peters-photo-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "peters_photo_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.2.67"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
arboard = "3"
kamadak-exif = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1.9"
exiftool-rs = "0.6.1"
quickraw = { version = "0.1.6", features = ["image"] }
tokio = { version = "1", features = ["time"] }
